# irrevolutions

./: .env-template  .gitignore  .pre-commit-autoflake.yml  .pre-commit-config.yaml  .readthedocs.yaml  02_02_ayoub_project_4.ipynb  2021_01_25_trial_1.ipynb  2021_01_26_trial_2.ipynb  2021_01_29_parameters_mjb.ipynb  2021_12_01_geometry_mbilynsky.ipynb  3crackholes with energy  3crackholes(energy).ipynb  Angle 70.5.ipynb  Angle30°.ipynb  Angle30°refirement.ipynb  Ayoub_project_4.ipynb  Ayoub_straightcrack.ipynb  CITATION.cff  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Corrections_En_passant_Sarah_Cork.ipynb  Dockerfile  En_passant_Sarah.ipynb  En_passant_Sarah11.ipynb  En_passant_SarahCork.ipynb  En_passant_SarahPolystyrene.ipynb  Fenics angle 60°.ipynb  Ficher.sauv  Final_version.ipynb  Final_version_1.ipynb  Final_version_2.ipynb  LEFTBEHIND.md  LICENSE  M4S_intro_numerics.ipynb  MANIFEST.in  MEC647_Fracture_5.ipynb  Meshkinkingameliorated.ipynb  Michael_bilynsky_final_2021_02_09.ipynb  README.md  RhombusHole.ipynb  (+64 more)
.github/: FUNDING.yml
02/: 02 ayoub_project_4
3crackholes/: withenergy.ipynb
CAST3M/: TP_notch_cast3M.dgibi  castem_loop.py  gmsh_Vnotch.py
DIC_CT_35/: DIC_FEniCS_Isotropy.ipynb  charge_libre.csv  export_msh.py
EXPERIMENTS/: Notch_problem.py
NOTCH/: Notch_problem.py  Notch_problem_v2.py
algorithms/: __init__.py  _so.docstrings  am.py  ls.py  so.py  so_merged.py  so_prefork.py
contributed/: dAlembert_stability.ipynb
data/: matpar.csv  matpar.json
demo/: TP.py  demo_bifurcation.py  demo_biharmonic.py  demo_contact.py  demo_elasticity.py  demo_strong_aniso.py  demo_traction.py  demo_vector_info.py  demo_vi.py  parameters.yml
docker/: Dockerfile.dev  build_image.sh  fenicsx-stable.dockerfile
docs/: branch-vitality-map.md  minimal-contract.md  pr-andres-bifurcation-tuning.md  pr-minimal-contract-rollout.md  practice-migration-matrix.md  repo-trust-and-branch-map.md  requirements.txt
igor_TP/: Gen_mesh.py  Notch_problem.py  mesh.unv
meshes/: V_notch_2D.py  __init__.py  boolean.py  crackholes.py  enpassant.py  extended_pacman.py  ikea.py  kink.py  pacman.py  primitives.py  sharp_notch_mesh.py  specimens.py  tdcb_2D.py  test_fuse.py  test_occ.py  test_occ_2.py  test_occ_pacman.py  test_occ_t16.py  test_occ_triangle.py  thekink.py
models/: __init__.py  maltidummag.py
note_latex/: discrete_damage.bbl  discrete_damage.bib  discrete_damage.blg  discrete_damage.tex  elsarticle.cls
notes/: discrete-note.tex  discretely-exercise.tex  mooning_ice_cracks.md
paper/: addendum.md  paper.bib  paper.jats  paper.md
practice/: _paths.py  crackholes.py  default.py  discrete_atk.py  discrete_atk_homogeneous.py  enpassant.py  kink.py  latest.ipynb  mert_data_v0.py  mert_data_v1.py  mert_v0.py  mert_v1_WithSubstrate.py  mert_v2_AM.py  multiaxial-disc.py  pacman-cone.py  pacman_hybrid.py  pacman_potentials.py  parametric-traction-bar-s.py  rhombus.ipynb  thinfilm-bar.py  traction-AT1_cone.py  traction-AT1_cone_mert.py  traction-AT1_first_order.py  traction-AT2_cone.py  traction-ATJJ.py  traction-bar-clean.py  traction-cone.py  traction-parametric.py  traction_cone.py  unstabinst.py  withRhombus.ipynb  withRhombus_2.ipynb  withRhombus_3.ipynb  withkink.py  (+4 more)
(+956 files in other folders)
