[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "irrevolutions"
version = "0.1.0"
description = "A Python package for solving nonlinear and nonconvex evolutionary problems using a general energetic notion of stability and dolfinx."
authors = ["Your Name <leon.baldelli@cnrs.fr>"]

# Optional dependencies are specified in this section
[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2"
sympy = "^1.8"
pytest = "^6.0"
matplotlib = "^3.4"
gmsh = "^4.11.0"
PyYAML = "^6.0.1"
scipy = "^1.12.0"
pyvista = "^0.43"
numba = "^0.60.0"

[tool.poetry.extras]
dolfinx_support = []

[tool.poetry.scripts]
irrevolutions = 'irrevolutions:main'

# Ensure that non-code files (e.g., default_parameters.yml) are included in the package
[tool.poetry.include]
irrevolutions = ["src/irrevolutions/models/default_parameters.yml"]

# Additional files to include (e.g., readme, licenses, configs)
include = [
    "README.md",
    "LICENSE",
    "src/irrevolutions/models/default_parameters.yml"
]

[tool.poetry.package]
# Map the source code to the correct directory structure
package = { "irrevolutions": "src/irrevolutions" }